--- a/src1/testUi01.ui
+++ b/src1/testUi01.ui
@@ -17,50 +17,111 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>80</y>
+      <x>310</x>
+      <y>280</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Simulate</string>
     </property>
    </widget>
-   <widget class="QSlider" name="verticalSlider">
+   <widget class="QSlider" name="co2Source">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>170</y>
-      <width>19</width>
-      <height>160</height>
+      <x>50</x>
+      <y>29</y>
+      <width>20</width>
+      <height>221</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
+    <property name="tickPosition">
+     <enum>QSlider::TicksBelow</enum>
+    </property>
    </widget>
-   <widget class="QSlider" name="verticalSlider_2">
+   <widget class="QSlider" name="co2sink">
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>170</y>
-      <width>19</width>
-      <height>160</height>
+      <y>29</y>
+      <width>20</width>
+      <height>221</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
+    </property>
+    <property name="tickPosition">
+     <enum>QSlider::TicksBelow</enum>
     </property>
    </widget>
    <widget class="MatplotlibWidget" name="widget" native="true">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>110</y>
+      <x>310</x>
+      <y>30</y>
       <width>291</width>
       <height>231</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QSlider" name="protonSource">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>29</y>
+      <width>20</width>
+      <height>221</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+    <property name="tickPosition">
+     <enum>QSlider::TicksBelow</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="co2SourceLabel">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>260</y>
+      <width>61</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>CO2 source</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="co2SinkLabel">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>260</y>
+      <width>51</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>CO2 sink</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="protonSourceLabel">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>260</y>
+      <width>61</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>H+ source</string>
     </property>
    </widget>
   </widget>
