Sliders for co2Source and protonSource also connected up now.
Also, mostly consistently using uppercase for the S in Source and Sink
now.

--- a/src1/testUi01.ui
+++ b/src1/testUi01.ui
@@ -43,7 +43,7 @@
      <enum>QSlider::TicksBelow</enum>
     </property>
    </widget>
-   <widget class="QSlider" name="co2sink">
+   <widget class="QSlider" name="co2Sink">
     <property name="geometry">
      <rect>
       <x>130</x>
