--- a/src1/testUi01.ui
+++ b/src1/testUi01.ui
@@ -14,115 +14,224 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>280</y>
-      <width>75</width>
-      <height>23</height>
+      <x>20</x>
+      <y>20</y>
+      <width>351</width>
+      <height>481</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Simulate</string>
+    <property name="title">
+     <string>Adjustments</string>
     </property>
+    <widget class="QSlider" name="co2Sink">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>30</y>
+       <width>20</width>
+       <height>221</height>
+      </rect>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="tickPosition">
+      <enum>QSlider::TicksBelow</enum>
+     </property>
+    </widget>
+    <widget class="QLabel" name="co2SourceLabel">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>261</y>
+       <width>61</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>CO2 source</string>
+     </property>
+    </widget>
+    <widget class="QSlider" name="protonSource">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>30</y>
+       <width>20</width>
+       <height>221</height>
+      </rect>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="tickPosition">
+      <enum>QSlider::TicksBelow</enum>
+     </property>
+    </widget>
+    <widget class="QLabel" name="co2SinkLabel">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>261</y>
+       <width>51</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>CO2 sink</string>
+     </property>
+    </widget>
+    <widget class="QSlider" name="co2Source">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>30</y>
+       <width>20</width>
+       <height>221</height>
+      </rect>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="tickPosition">
+      <enum>QSlider::TicksBelow</enum>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="protonSourceValue">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>291</y>
+       <width>51</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="co2SinkValue">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>291</y>
+       <width>51</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="protonSourceLabel">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>261</y>
+       <width>61</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>H+ source</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="co2SourceValue">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>291</y>
+       <width>51</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <zorder>co2Sink</zorder>
+    <zorder>co2SourceLabel</zorder>
+    <zorder>protonSource</zorder>
+    <zorder>co2SinkLabel</zorder>
+    <zorder>co2Source</zorder>
+    <zorder>protonSourceLabel</zorder>
+    <zorder>co2SinkValue</zorder>
+    <zorder>protonSourceValue</zorder>
+    <zorder>co2SourceValue</zorder>
+    <zorder>co2Sink</zorder>
+    <zorder>co2SourceLabel</zorder>
+    <zorder>protonSource</zorder>
+    <zorder>co2SinkLabel</zorder>
+    <zorder>co2Source</zorder>
+    <zorder>protonSourceValue</zorder>
+    <zorder>co2SinkValue</zorder>
+    <zorder>protonSourceLabel</zorder>
+    <zorder>co2SourceValue</zorder>
    </widget>
-   <widget class="QSlider" name="co2Source">
+   <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>29</y>
-      <width>20</width>
-      <height>221</height>
+      <x>380</x>
+      <y>20</y>
+      <width>361</width>
+      <height>481</height>
      </rect>
     </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
+    <property name="title">
+     <string>Results</string>
     </property>
-    <property name="tickPosition">
-     <enum>QSlider::TicksBelow</enum>
-    </property>
-   </widget>
-   <widget class="QSlider" name="co2Sink">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>29</y>
-      <width>20</width>
-      <height>221</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
-    </property>
-    <property name="tickPosition">
-     <enum>QSlider::TicksBelow</enum>
-    </property>
-   </widget>
-   <widget class="MatplotlibWidget" name="widget" native="true">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>30</y>
-      <width>291</width>
-      <height>231</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QSlider" name="protonSource">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>29</y>
-      <width>20</width>
-      <height>221</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
-    </property>
-    <property name="tickPosition">
-     <enum>QSlider::TicksBelow</enum>
-    </property>
-   </widget>
-   <widget class="QLabel" name="co2SourceLabel">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>260</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>CO2 source</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="co2SinkLabel">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>260</y>
-      <width>51</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>CO2 sink</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="protonSourceLabel">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>260</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>H+ source</string>
-    </property>
+    <widget class="QPlainTextEdit" name="logText">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>340</y>
+       <width>311</width>
+       <height>111</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="resetButton">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>280</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Reset</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="simulateButton">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>280</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Simulate</string>
+     </property>
+    </widget>
+    <widget class="MatplotlibWidget" name="plotArea" native="true">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>30</y>
+       <width>291</width>
+       <height>231</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
